Fix alignment

--- a/assets/css/sunil-style.css
+++ b/assets/css/sunil-style.css
@@ -2,3 +2,58 @@
     background: #06060e;
     padding: 10px 20px;
 }
+
+.gallery-item {
+    /* aspect-ratio: 1 / 1; */
+    overflow: hidden;
+  }
+  .gallery-img {
+    max-width: 160px;
+    height: 160px;
+    object-fit: cover; /* Ensures the image fills the block while keeping the aspect ratio */
+    width: 50%;
+  }
+
+  /* Goldrose Button Style */
+.goldrose-btn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 6px 15px;
+    background: linear-gradient(90deg, #d5a77c 0%, #efbf8f 45%, #7c5231 100%);
+    border: 2px solid #d5a77c;
+    border-radius: 0.88em;
+    color: #000;
+    font-weight: bold;
+    text-decoration: none;
+    position: relative;
+    overflow: hidden;
+    /* box-shadow: 0 4px 12px rgba(255, 205, 87, 0.7); */
+    transition: all 0.5s ease;
+    font-size: 14px;
+  }
+  
+  /* Shine Effect */
+  .goldrose-btn::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 100%);
+    transition: transform 0.5s ease;
+  }
+  
+  .goldrose-btn:hover::after {
+    transform: translateX(200%);
+    color: #000;
+  }
+  .goldrose-btn:active, .goldrose-btn:focus, .goldrose-btn:hover {
+    color: #000;
+  }
+  
+  .card-title, a.btn-link {
+    color: #d5a77c;
+    /* //#f7d2b2; */
+  }
